--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <title>Grocify</title>
 </head>
 <body>
-    <div class="container min-h-screen bg-[url('/images/image.png')] bg-center bg-cover bg-no-repeat text-white" >
-        <nav class="flex items-center justify-between px-5">
-            <img src="./images/logo.png" alt="">
-            <ul class="flex gap-4">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Contact</a></li>
+    <div class="container min-h-screen bg-[url('/images/image.png')] bg-center bg-cover bg-no-repeat px-28 py-5" >
+        <nav class="flex items-center ">
+            <img class="w-40 cursor-pointer" src="./images/logo.png" alt="">
+            <ul class="flex-1 text-center">
+                <li class="list-none inline-block px-5"><a class="no-underline text-white px-2" href="#">Home</a></li>
+                <li class="list-none inline-block px-5"><a class="no-underline text-white px-2" href="#">About</a></li>
+                <li class="list-none inline-block px-5"><a class="no-underline text-white px-2" href="#">Features</a></li>
+                <li class="list-none inline-block px-5"><a class="no-underline text-white px-2" href="#">Contact</a></li>
             </ul>
-            <img src="./images/cart.png" alt="">
+            <img class="w-8 cursor-pointer" src="./images/cart.png" alt="">
         </nav>
     </div>
 </body>
