--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Grocify</title>
 </head>
 <body>
-    <div class="container min-h-screen bg-[url('/images/image.png')] bg-center bg-cover bg-no-repeat px-28 py-5" >
+    <div class="container min-h-screen bg-[url('/images/image.png')] bg-center bg-cover bg-no-repeat px-28 py-5 relative" >
         <nav class="flex items-center ">
             <img class="w-40 cursor-pointer" src="./images/logo.png" alt="">
             <ul class="flex-1 text-center">
@@ -19,6 +19,22 @@
             </ul>
             <img class="w-8 cursor-pointer" src="./images/cart.png" alt="">
         </nav>
+
+        <div class="text-white mt-48 max-w-xl">
+            <h1 class="text-6xl font-semibold leading-normal">Groceries <br> Delivery in <span class="font-light">15 mins</span></h1>
+            <p>Grocify offers a wide range of products, including fresh products, meat, diary, backed goodsand non-preshiable items</p>
+
+            <div class="mt-10">
+                <a href="#" class="bg-yellow-300 rounded-3xl font-medium py-3 px-8 inline-block mr-4 hover:bg-transparent hover:border-yellow-300 border border-transparent">Order Now</a>
+                <a href="#">Download App <span class="text-lg rotate-90 inline-block">&#10148;</span></a>
+            </div>
+        </div>
+
+        <img src="./images/grocery-image.png" class="w-full xl:w-1/2 xl:absolute xl:bottom-0 xl:right-20" alt="">
+
+
     </div>
+
+
 </body>
 </html>
